# syncit

./: .gitignore  Cargo.toml  build.rs
proto/: protocol.proto
sql/: file_details.sql  index_files.sql
src/: lib.rs
src/ext/: async_file_ext.rs  async_temp_file.rs  file_copy.rs  hash.rs  mod.rs
src/file_event_produce/: mod.rs
src/file_event_produce/producer/: mod.rs
src/index/: mod.rs  sqlite_index.rs
src/sync_control/: event.rs  mod.rs  rumors_event_handler.rs  sync_all_handler.rs  watch_event_handler.rs
src/sync_control/rumors_event_handler/: mod.rs  tests.rs
src/sync_control/sync_all_handler/: mod.rs  tests.rs
src/sync_control/watch_event_handler/: add_tests.rs  delete_tests.rs  mod.rs  modify_tests.rs  rename_tests.rs
src/transfer/: mod.rs
src/transfer/grpc/: mod.rs
src/transfer/grpc/client/: mod.rs
