[package]
name = "syncit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1", features = ["fs"] }
bytes = "1"

async-trait = "0.1"
futures-util = { version = "0.3", features = ["sink"] }

# save index
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }

# inotify
notify = { version = "5", default-features = false }

flume = "0.10"

itertools = "0.10"

anyhow = "1"
tap = "1"

# hash
sha2 = { version = "0.10", features = ["asm"] }

uuid = { version = "1", features = ["v4"] }

# file copy
nix = "0.25"

rand = "0.8"

# time format
chrono = "0.4"

# log
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
